syntax = "proto3";

package pb;


message ChainMeta {
    uint64 height = 1;
    bytes block_hash = 2; // [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    uint64 interchain_tx_count = 3;
}