syntax = "proto3";

package pb;

import "transaction.proto";

message Receipt {
    enum Status {
        SUCCESS = 0;
        FAILED = 1;
    }
    bytes version = 1;
    bytes tx_hash = 2;
    bytes ret = 3;
    Status status = 4;
    repeated Event events = 5;
    uint64 gas_used = 6;
    repeated EvmLog evm_logs = 7;
    bytes bloom = 8;
    bytes contract_address = 9;
    TransactionStatus tx_status = 10;
}

message Receipts {
    repeated Receipt receipts = 1;
}

message Event {
    enum EventType {
        OTHER = 0;
        INTERCHAIN = 1;
        NODEMGR = 2;
        WASM = 3;
        AUDIT_PROPOSAL = 4;
        AUDIT_APPCHAIN = 5;
        AUDIT_RULE = 6;
        AUDIT_SERVICE = 7;
        AUDIT_NODE = 8;
        AUDIT_ROLE = 9;
        AUDIT_INTERCHAIN = 10;
        AUDIT_DAPP = 11;
        SERVICE = 12;
    }
    // Transaction Hash
    bytes tx_hash = 1;
    bytes data = 2;
    // Event Type: interchain, nodemgr
    EventType event_type = 3;
}

message EvmLog {
    bytes address = 1;

    repeated bytes topics = 2;

    bytes data = 3;

    uint64 blockNumber = 4;

    bytes transactionHash = 5;

    uint64 transactionIndex = 6;

    bytes blockHash = 7;

    uint64 logIndex = 8;

    bool removed = 9;
}
